--- a/isar2html/isarhtml/index.html
+++ b/isar2html/isarhtml/index.html
@@ -192,6 +192,8 @@ After loading a page you may see the LaTeX markup instead of mathematical notati
 
 <p><a href="TopologicalGroup_ZF.html">TopologicalGroup_ZF</a></p>
 
+<p><a href="TopologicalGroup_Uniformity_ZF.html">TopGroup_Uniformity_ZF</a></p>
+
 <p><a href="MMI_prelude.html">MMI_prelude</a></p>
 
 <p><a href="Metamath_interface.html">Metamath_interface</a></p>
