--- a/isar2html/isar2html_template.html
+++ b/isar2html/isar2html_template.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" type="text/css" href="imlstyle.css" />
 
   <script type="text/javascript"
-    src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+    src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
   </script>
 </head>
 
@@ -71,9 +71,9 @@
       <div class="frame">
         <div class="frame-bd"></div>
 
-<a rel="license" href="http://creativecommons.org/licenses/by/3.0/us/">
-<img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by/3.0/80x15.png" /></a>
-This page by <a xmlns:cc="http://creativecommons.org/ns#" href="http://slawekk.wordpress.com/" property="cc:attributionName" rel="cc:attributionURL">Slawomir Kolodynski</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/us/">Creative Commons Attribution 3.0 License</a>. BTC: 189qAMLvqevxMrCsZaABMJ3cLkXdSwMNK8
+<a rel="license" href="https://creativecommons.org/licenses/by/3.0/us/">
+<img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/80x15.png" /></a>
+This page by <a xmlns:cc="https://creativecommons.org/ns#" href="https://slawekk.wordpress.com/" property="cc:attributionName" rel="cc:attributionURL">Slawomir Kolodynski</a> is licensed under a <a rel="license" href="https://creativecommons.org/licenses/by/3.0/us/">Creative Commons Attribution 3.0 License</a>. BTC: 189qAMLvqevxMrCsZaABMJ3cLkXdSwMNK8
 
       </div>
     </div><!--//main-header-->
