--- a/isar2html/isarhtml/index.html
+++ b/isar2html/isarhtml/index.html
@@ -41,7 +41,7 @@
 <h3>About this site</h3>
 <div class="inftext">
 <p>This site is an experimental HTML rendering of fragments of the 
-<a href="https://www.nongnu.org/isarmathlib/">IsarMathLib</a> project. 
+<a href="https://skolodynski.github.io/IsarMathLib/">IsarMathLib</a> project. 
 IsarMathLib is a library of mathematical proofs formally verified by the <a href="https://www.cl.cam.ac.uk/research/hvg/Isabelle/">Isabelle</a> theorem proving environment. 
 The formalization is based on the Zermelo-Fraenkel set theory. The <a href="Introduction.html">Introduction</a>
 provides more information about IsarMathLib.</p>
@@ -49,7 +49,7 @@ provides more information about IsarMathLib.</p>
 <p>The software for exporting Isabelle's Isar language to HTML markup is at an early beta stage, 
 so some proofs may be rendered incorrectly. 
 In case of doubts, compare with the Isabelle generated IsarMathLib 
-<a href="https://www.nongnu.org/isarmathlib/IsarMathLib/document.pdf">proof document</a>.</p>
+<a href="https://skolodynski.github.io/IsarMathLib/IsarMathLib/document.pdf">proof document</a>.</p>
 <p>
 Mathematical notation on this site is rendered by <a href="https://www.mathjax.org/">MathJax</a>.
 MathJax is an implementation of TeX layout algorithms in JavaScript. 
