added Lattice_ZF.html to the list on the isarmathlib homa page

--- a/isar2html/isarhtml/index.html
+++ b/isar2html/isarhtml/index.html
@@ -110,6 +110,8 @@ After loading a page you may see the LaTeX markup instead of mathematical notati
 
 <p><a href="Order_ZF_1a.html">Order_ZF_1a</a></p>
 
+<p><a href="Lattice_ZF.html">Lattice_ZF</a></p>
+
 <p><a href="NatOrder_ZF.html">NatOrder_ZF</a></p>
 
 <p><a href="FinOrd_ZF.html">FinOrd_ZF</a></p>
