updated the isarmathlib.org landing page

--- a/isar2html/isarhtml/index.html
+++ b/isar2html/isarhtml/index.html
@@ -48,8 +48,8 @@ provides more information about IsarMathLib.</p>
 
 <p>The software for exporting Isabelle's Isar language to HTML markup is at an early beta stage, 
 so some proofs may be rendered incorrectly. 
-In case of doubts, compare with the Isabelle generated IsarMathLib 
-<a href="https://skolodynski.github.io/IsarMathLib/IsarMathLib/document.pdf">proof document</a>.</p>
+In case of doubts, compare with the Isabelle generated HTML 
+<a href="https://skolodynski.github.io/IsarMathLib/IsarMathLib">presentation</a>, the <a href="https://skolodynski.github.io/IsarMathLib/IsarMathLib/document.pdf">proof document</a> or directly the <a href="https://github.com/SKolodynski/IsarMathLib/tree/master/IsarMathLib">theory sources</a>.</p>
 <p>
 Mathematical notation on this site is rendered by <a href="https://www.mathjax.org/">MathJax</a>.
 MathJax is an implementation of TeX layout algorithms in JavaScript. 
