--- a/isar2html/isarhtml/index.html
+++ b/isar2html/isarhtml/index.html
@@ -190,6 +190,8 @@ After loading a page you may see the LaTeX markup instead of mathematical notati
 
 <p><a href="Topology_ZF_6.html">Topology_ZF_6</a></p>
 
+<p><a href="MetricSpace_ZF.html">MetricSpace_ZF</a></p>
+
 <p><a href="UniformSpace_ZF.html">UniformSpace_ZF</a></p>
 
 <p><a href="TopologicalGroup_ZF.html">TopologicalGroup_ZF</a></p>
