changed the slogan on the isarmathlib.org site

--- a/isar2html/isar2html_template.html
+++ b/isar2html/isar2html_template.html
@@ -25,8 +25,7 @@
 
         <h1>IsarMathLib</h1>
 
-        <h2>A library of formalized mathematics for Isabelle/ZF
-        theorem proving environment</h2>
+        <h2>Proofs by humans, for humans, formally verified by Isabelle/ZF proof assistant</h2>
       </div>
     </div><!--//main-header-->
     <!--pri-->
