added a theory on real numbers

--- a/isar2html/isarhtml/index.html
+++ b/isar2html/isarhtml/index.html
@@ -169,6 +169,8 @@ After loading a page you may see the LaTeX markup instead of mathematical notati
 
 <p><a href="Real_ZF_1.html">Real_ZF_1</a></p>
 
+<p><a href="Real_ZF_2.html">Real_ZF_2</a></p>
+
 <p><a href="Complex_ZF.html">Complex_ZF</a></p>
 
 <p><a href="Topology_ZF.html">Topology_ZF</a></p>
