modified index.html to include Quasigroup_ZF

--- a/isar2html/isarhtml/index.html
+++ b/isar2html/isarhtml/index.html
@@ -119,7 +119,7 @@ After loading a page you may see the LaTeX markup instead of mathematical notati
 
 <p><a href="Enumeration_ZF.html">Enumeration_ZF</a></p>
 
-<p><a href="Quasigroup_ZF.html">Semigroup_ZF</a></p>
+<p><a href="Quasigroup_ZF.html">Quasigroup_ZF</a></p>
 
 <p><a href="Semigroup_ZF.html">Semigroup_ZF</a></p>
 
