added theory on loops

--- a/isar2html/isarhtml/index.html
+++ b/isar2html/isarhtml/index.html
@@ -121,6 +121,8 @@ After loading a page you may see the LaTeX markup instead of mathematical notati
 
 <p><a href="Quasigroup_ZF.html">Quasigroup_ZF</a></p>
 
+<p><a href="Loop_ZF.html">Loop_ZF</a></p>
+
 <p><a href="Semigroup_ZF.html">Semigroup_ZF</a></p>
 
 <p><a href="CommutativeSemigroup_ZF.html">CommutativeSemigroup_ZF</a></p>
