--- a/isar2html/isarhtml/index.html
+++ b/isar2html/isarhtml/index.html
@@ -201,6 +201,10 @@ After loading a page you may see the LaTeX markup instead of mathematical notati
 
 <p><a href="UniformSpace_ZF.html">UniformSpace_ZF</a></p>
 
+<p><a href="UniformSpace_ZF_1.html">UniformSpace_ZF_1</a></p>
+
+<p><a href="UniformSpace_ZF_2.html">UniformSpace_ZF_2</a></p>
+
 <p><a href="TopologicalGroup_ZF.html">TopologicalGroup_ZF</a></p>
 
 <p><a href="TopologicalGroup_Uniformity_ZF.html">TopGroup_Uniformity_ZF</a></p>
