improvements in html generation

--- a/isar2html2.0/isarhtml/index.html
+++ b/isar2html2.0/isarhtml/index.html
@@ -155,6 +155,8 @@ After loading a page you may see the LaTeX markup instead of mathematical notati
 
 <p><a href="OrderedRing_ZF.html">OrderedRing_ZF</a></p>
 
+<p><a href="Group_ZF_4.html">Group_ZF_4</a></p>
+
 <p><a href="Field_ZF.html">Field_ZF</a></p>
 
 <p><a href="OrderedField_ZF.html">OrderedField_ZF</a></p>
