--- a/isar2html2.0/isar2html_template.html
+++ b/isar2html2.0/isar2html_template.html
@@ -10,9 +10,8 @@
   <title>IsarMathLib</title>
   <link rel="stylesheet" type="text/css" href="imlstyle.css" />
 
-  <script type="text/javascript"
-    src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-  </script>
+  <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+  <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
 
 <body>
