added multiples of monoid elements

--- a/isar2html2.0/isarhtml/index.html
+++ b/isar2html2.0/isarhtml/index.html
@@ -131,6 +131,8 @@ After loading a page you may see the LaTeX markup instead of mathematical notati
 
 <p><a href="Monoid_ZF.html">Monoid_ZF</a></p>
 
+<p><a href="Monoid_ZF_1.html">Monoid_ZF_1</a></p>
+
 <p><a href="Group_ZF.html">Group_ZF</a></p>
 
 <p><a href="Group_ZF_1.html">Group_ZF_1</a></p>
