--- a/isar2html2.0/isarhtml/index.html
+++ b/isar2html2.0/isarhtml/index.html
@@ -153,6 +153,8 @@ After loading a page you may see the LaTeX markup instead of mathematical notati
 
 <p><a href="Ring_ZF.html">Ring_ZF</a></p>
 
+<p><a href="Ring_Binomial_ZF.html">Ring_Binomial_ZF</a></p>
+
 <p><a href="Ring_ZF_1.html">Ring_ZF_1</a></p>
 
 <p><a href="OrderedRing_ZF.html">OrderedRing_ZF</a></p>
