--- a/isar2html2.0/isarhtml/index.html
+++ b/isar2html2.0/isarhtml/index.html
@@ -201,6 +201,8 @@ After loading a page you may see the LaTeX markup instead of mathematical notati
 
 <p><a href="Topology_ZF_6.html">Topology_ZF_6</a></p>
 
+<p><a href="Topology_ZF_8.html">Topology_ZF_8</a></p>
+
 <p><a href="MetricSpace_ZF.html">MetricSpace_ZF</a></p>
 
 <p><a href="Real_ZF_2.html">Real_ZF_2</a></p>
