--- a/isar2html2.0/isarhtml/index.html
+++ b/isar2html2.0/isarhtml/index.html
@@ -157,11 +157,15 @@ After loading a page you may see the LaTeX markup instead of mathematical notati
 
 <p><a href="Ring_ZF_1.html">Ring_ZF_1</a></p>
 
+<p><a href="Ring_ZF_2.html">Ring_ZF_2</a></p>
+
 <p><a href="OrderedRing_ZF.html">OrderedRing_ZF</a></p>
 
 <p><a href="Group_ZF_4.html">Group_ZF_4</a></p>
 
 <p><a href="Group_ZF_5.html">Group_ZF_5</a></p>
+
+<p><a href="Ring_ZF_3.html">Ring_ZF_3</a></p>
 
 <p><a href="Field_ZF.html">Field_ZF</a></p>
 
