changed html presentation license to CC BY 4.0

--- a/isar2html2.0/isar2html_template.html
+++ b/isar2html2.0/isar2html_template.html
@@ -71,7 +71,7 @@
 
 <a rel="license" href="https://creativecommons.org/licenses/by/3.0/us/">
 <img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/80x15.png" /></a>
-This page by <a xmlns:cc="https://creativecommons.org/ns#" href="https://slawekk.wordpress.com/" property="cc:attributionName" rel="cc:attributionURL">Slawomir Kolodynski</a> is licensed under a <a rel="license" href="https://creativecommons.org/licenses/by/3.0/us/">Creative Commons Attribution 3.0 License</a>. BTC: 189qAMLvqevxMrCsZaABMJ3cLkXdSwMNK8
+This page by <a xmlns:cc="https://creativecommons.org/ns#" href="https://slawekk.wordpress.com/" property="cc:attributionName" rel="cc:attributionURL">Slawomir Kolodynski</a> is licensed under <a rel="license" href="https://creativecommons.org/licenses/by/4.0//">CC BY 4.0</a>. BTC: 189qAMLvqevxMrCsZaABMJ3cLkXdSwMNK8
 
       </div>
     </div><!--//main-header-->
