--- a/isar2html2.0/isarhtml/index.html
+++ b/isar2html2.0/isarhtml/index.html
@@ -240,7 +240,7 @@ After loading a page you may see the LaTeX markup instead of mathematical notati
         <div class="frame-bd"></div>
 <a rel="license" href="https://creativecommons.org/licenses/by/3.0/us/">
 <img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/80x15.png" /></a>
-This page by <a xmlns:cc="https://creativecommons.org/ns#" href="https://slawekk.wordpress.com/" property="cc:attributionName" rel="cc:attributionURL">Slawomir Kolodynski</a> is licensed under a <a rel="license" href="https://creativecommons.org/licenses/by/3.0/us/">Creative Commons Attribution 3.0 License</a>.
+This page by <a xmlns:cc="https://creativecommons.org/ns#" href="https://slawekk.wordpress.com/" property="cc:attributionName" rel="cc:attributionURL">Slawomir Kolodynski</a> is licensed under <a rel="license" href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a>.
       </div>
     </div><!--//main-header-->
   </div><!--//doc-->
