added Module_ZF and VectorSpace_ZF to isarmathlib.org generation

--- a/isar2html2.0/isarhtml/index.html
+++ b/isar2html2.0/isarhtml/index.html
@@ -169,6 +169,10 @@ After loading a page you may see the LaTeX markup instead of mathematical notati
 
 <p><a href="Field_ZF.html">Field_ZF</a></p>
 
+<p><a href="Module_ZF.html">Module_ZF</a></p>
+
+<p><a href="VectorSpace_ZF.html">VectorSpace_ZF</a></p>
+
 <p><a href="OrderedField_ZF.html">OrderedField_ZF</a></p>
 
 <p><a href="FinSupp_ZF.html">FinSupp_ZF</a></p>
