--- a/isar2html2.0/isarhtml/index.html
+++ b/isar2html2.0/isarhtml/index.html
@@ -217,6 +217,8 @@ After loading a page you may see the LaTeX markup instead of mathematical notati
 
 <p><a href="Real_ZF_2.html">Real_ZF_2</a></p>
 
+<p><a href="MetricSpace_ZF_1.html">Real_ZF_2</a></p>
+
 <p><a href="UniformSpace_ZF.html">UniformSpace_ZF</a></p>
 
 <p><a href="UniformSpace_ZF_1.html">UniformSpace_ZF_1</a></p>
