improvements in comments

--- a/isar2html2.0/isarhtml/index.html
+++ b/isar2html2.0/isarhtml/index.html
@@ -213,17 +213,17 @@ After loading a page you may see the LaTeX markup instead of mathematical notati
 
 <p><a href="Topology_ZF_8.html">Topology_ZF_8</a></p>
 
-<p><a href="MetricSpace_ZF.html">MetricSpace_ZF</a></p>
-
 <p><a href="Real_ZF_2.html">Real_ZF_2</a></p>
-
-<p><a href="MetricSpace_ZF_1.html">Real_ZF_2</a></p>
 
 <p><a href="UniformSpace_ZF.html">UniformSpace_ZF</a></p>
 
 <p><a href="UniformSpace_ZF_1.html">UniformSpace_ZF_1</a></p>
 
 <p><a href="UniformSpace_ZF_2.html">UniformSpace_ZF_2</a></p>
+
+<p><a href="MetricSpace_ZF.html">MetricSpace_ZF</a></p>
+
+<p><a href="MetricSpace_ZF_1.html">MetricSpace_ZF_1</a></p>
 
 <p><a href="TopologicalGroup_ZF.html">TopologicalGroup_ZF</a></p>
 
