added IntGroup_ZF to theories parsed for isarmathlib.org

--- a/isar2html2.0/isarhtml/index.html
+++ b/isar2html2.0/isarhtml/index.html
@@ -187,6 +187,8 @@ After loading a page you may see the LaTeX markup instead of mathematical notati
 
 <p><a href="Int_ZF_3.html">Int_ZF_3</a></p>
 
+<p><a href="IntGroup_ZF.html">Int_ZF_3</a></p>
+
 <p><a href="Real_ZF.html">Real_ZF</a></p>
 
 <p><a href="Real_ZF_1.html">Real_ZF_1</a></p>
