more properties of integer powers of group elements

--- a/isar2html2.0/isarhtml/index.html
+++ b/isar2html2.0/isarhtml/index.html
@@ -187,7 +187,7 @@ After loading a page you may see the LaTeX markup instead of mathematical notati
 
 <p><a href="Int_ZF_3.html">Int_ZF_3</a></p>
 
-<p><a href="IntGroup_ZF.html">Int_ZF_3</a></p>
+<p><a href="IntGroup_ZF.html">IntGroup_ZF</a></p>
 
 <p><a href="Real_ZF.html">Real_ZF</a></p>
 
