various small corrections

--- a/isar2html2.0/isarhtml/index.html
+++ b/isar2html2.0/isarhtml/index.html
@@ -73,6 +73,7 @@ After loading a page you may see the LaTeX markup instead of mathematical notati
 
           <div class="leftlinks">
             <p><a href="index.html">About this site</a></p>
+
 <p><a href="Introduction.html">Introduction</a></p>
 
 <p><a href="Fol1.html">Fol1</a></p>
@@ -81,13 +82,17 @@ After loading a page you may see the LaTeX markup instead of mathematical notati
 
 <p><a href="Nat_ZF_IML.html">Nat_ZF_IML</a></p>
 
+<p><a href="Order_ZF.html">Order_ZF</a></p>
+
+<p><a href="Order_ZF_1.html">Order_ZF_1</a></p>
+
+<p><a href="Order_ZF_1a.html">Order_ZF_1a</a></p>
+
 <p><a href="Finite1.html">Finite1</a></p>
 
 <p><a href="Finite_ZF_1.html">Finite_ZF_1</a></p>
 
 <p><a href="Finite_ZF.html">Finite_ZF</a></p>
-
-<p><a href="Partitions_ZF.html">Partitions_ZF</a></p>
 
 <p><a href="func1.html">func1</a></p>
 
@@ -101,17 +106,15 @@ After loading a page you may see the LaTeX markup instead of mathematical notati
 
 <p><a href="FinOrd_ZF.html">FinOrd_ZF</a></p>
 
+<p><a href="FinOrd_ZF_1.html">FinOrd_ZF_1</a></p>
+
 <p><a href="FiniteSeq_ZF.html">FiniteSeq_ZF</a></p>
 
 <p><a href="InductiveSeq_ZF.html">InductiveSeq_ZF</a></p>
 
+<p><a href="Partitions_ZF.html">Partitions_ZF</a></p>
+
 <p><a href="Fold_ZF.html">Fold_ZF</a></p>
-
-<p><a href="Order_ZF.html">Order_ZF</a></p>
-
-<p><a href="Order_ZF_1.html">Order_ZF_1</a></p>
-
-<p><a href="Order_ZF_1a.html">Order_ZF_1a</a></p>
 
 <p><a href="Lattice_ZF.html">Lattice_ZF</a></p>
 
@@ -209,11 +212,11 @@ After loading a page you may see the LaTeX markup instead of mathematical notati
 
 <p><a href="Topology_ZF_4a.html">Topology_ZF_4a</a></p>
 
-<p><a href="Topology_ZF_examples.html">Topology_ZF_examples</a></p>
-
 <p><a href="Topology_ZF_6.html">Topology_ZF_6</a></p>
 
 <p><a href="Topology_ZF_8.html">Topology_ZF_8</a></p>
+
+<p><a href="Topology_ZF_examples.html">Topology_ZF_examples</a></p>
 
 <p><a href="Real_ZF_2.html">Real_ZF_2</a></p>
 
@@ -227,15 +230,17 @@ After loading a page you may see the LaTeX markup instead of mathematical notati
 
 <p><a href="MetricSpace_ZF_1.html">MetricSpace_ZF_1</a></p>
 
+<p><a href="MetricUniform_ZF.html">MetricUniform_ZF</a></p>
+
 <p><a href="TopologicalGroup_ZF.html">TopologicalGroup_ZF</a></p>
 
-<p><a href="TopologicalGroup_Uniformity_ZF.html">TopGroup_Uniformity_ZF</a></p>
+<p><a href="TopologicalGroup_Uniformity_ZF.html">TopologicalGroup_Uniformity_ZF</a></p>
 
 <p><a href="MMI_prelude.html">MMI_prelude</a></p>
 
-<p><a href="Metamath_interface.html">Metamath_interface</a></p>
+<p><a href="Metamath_Interface.html">Metamath_Interface</a></p>
 
-<p><a href="Metamath_sampler.html">Metamath_sampler</a></p>
+<p><a href="Metamath_Sampler.html">Metamath_Sampler</a></p>
 
           </div><!--//left-links-->
         </div><!--//sec-main-->
