--- a/isar2html2.0/isarhtml/index.html
+++ b/isar2html2.0/isarhtml/index.html
@@ -226,6 +226,8 @@ After loading a page you may see the LaTeX markup instead of mathematical notati
 
 <p><a href="UniformSpace_ZF_2.html">UniformSpace_ZF_2</a></p>
 
+<p><a href="UniformityLattice_ZF.html">UniformityLattice_ZF</a></p>
+
 <p><a href="MetricSpace_ZF.html">MetricSpace_ZF</a></p>
 
 <p><a href="MetricSpace_ZF_1.html">MetricSpace_ZF_1</a></p>
