refreshed Isabele generated docs for release 1.34.0

--- a/isar2html2.0/isarhtml/index.html
+++ b/isar2html2.0/isarhtml/index.html
@@ -238,6 +238,8 @@ After loading a page you may see the LaTeX markup instead of mathematical notati
 
 <p><a href="TopologicalGroup_Uniformity_ZF.html">TopologicalGroup_Uniformity_ZF</a></p>
 
+<p><a href="Tarski_ZF.html">Tarski_ZF</a></p>
+
 <p><a href="MMI_prelude.html">MMI_prelude</a></p>
 
 <p><a href="Metamath_Interface.html">Metamath_Interface</a></p>
