--- a/isar2html2.0/isarhtml/index.html
+++ b/isar2html2.0/isarhtml/index.html
@@ -192,6 +192,8 @@ After loading a page you may see the LaTeX markup instead of mathematical notati
 
 <p><a href="IntGroup_ZF.html">IntGroup_ZF</a></p>
 
+<p><a href="IntModule_ZF.html">IntModule_ZF</a></p>
+
 <p><a href="Real_ZF.html">Real_ZF</a></p>
 
 <p><a href="Real_ZF_1.html">Real_ZF_1</a></p>
